[package]
name = "pomodorust"
version = "0.1.0"
authors = ["Viktor Nagy <viktor.nagy@01people.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[dependencies.iced]
version = "0.2.0"
features = ["canvas", "tokio", "debug"]
